--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <!--Nav Outer-->
             <div class="nav-outer clearfix">
-                <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+                <!-- <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div> -->
                 <!-- Main Menu -->
                 <nav class="main-menu">
                     <div class="navbar-header">
@@ -292,7 +292,7 @@
                         </div>
                         <!-- end item -->
                         <!-- card item -->
-                        <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
+                        <!-- <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">Services</h4>
                                 <div class="row">
@@ -340,7 +340,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- end item -->
                         <!-- card item -->
                         <div class="card-projects card-item" id="work" style="background-image:url(images/background/2.jpg)">
